--- a/.github/workflows/imagecheck.yaml
+++ b/.github/workflows/imagecheck.yaml
@@ -20,10 +20,11 @@ jobs:
       run: |
         curl \
           --location \
-          --verbose \
-          https://github.com/FileFormatInfo/fflint/releases/latest/download/fflint_Linux_arm64.tar.gz \
-          | tar -xz - fflint
+          --silent \
+          https://github.com/FileFormatInfo/fflint/releases/latest/download/fflint_Linux_x86_64.tar.gz \
+          | tar -xz fflint
 
     - name: Check images
-      run: bin/chksvgimage.sh
+      run: |
+        PATH=.:$PATH bin/chksvgimage.sh
 
