--- a/.github/workflows/metacheck.yaml
+++ b/.github/workflows/metacheck.yaml
@@ -20,10 +20,10 @@ jobs:
       run: |
         curl \
           --location \
-          --verbose \
-          https://github.com/FileFormatInfo/fflint/releases/latest/download/fflint_Linux_arm64.tar.gz \
-          | tar -xz - fflint
+          --silent \
+          https://github.com/FileFormatInfo/fflint/releases/latest/download/fflint_Linux_x86_64.tar.gz \
+          | tar -xz fflint
 
     - name: Check metadata
-      run: bin/chkmeta.sh
-
+      run: |
+        PATH=.:$PATH bin/chkmeta.sh
