UPDATE: use view.svg.zone for preview

--- a/_config-dev.yml
+++ b/_config-dev.yml
@@ -2,3 +2,5 @@
 # additional config to speed up rebuilds during local development
 #
 exclude: [ "*.sh", "logos/[^1imn]*" ]
+viewer: "http://localhost:5000/view.html"
+production_url: "http://localhost:4000"
