Switching viewer URL

--- a/www/_config.yml
+++ b/www/_config.yml
@@ -20,4 +20,4 @@ defaults:
       type: "pages"
     values:
       layout: "default"
-viewer: "https://view.svg.zone/view.html"
+viewer: "https://svg-viewer-fileformat.info/view.html"
