--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,11 @@ end_of_line = lf
 charset = utf-8
 indent_size = 4
 indent_style = space
+trim_trailing_whitespace = true
+insert_final_newline = true
 
 [*.yaml]
 indent_size = 2
 
+[*.json]
+indent_size = 2
