--- a/www/_data/socialmedia.yaml
+++ b/www/_data/socialmedia.yaml
@@ -9,6 +9,7 @@
 - id: bluesky
   iconhtml: <i class="fab fa-bluesky icon-link"></i>
   logohandle: bskysocial
+  pattern: "^https://(([a-z]+\\.bsky\\.social/.*)|(bsky\\.app/profile/.+))"
 
 - id: codehost
   iconhtml: <i class="far fa-code-branch icon-link"></i>
@@ -17,14 +18,17 @@
 - id: discord
   iconhtml: <i class="fab fa-discord icon-link"></i>
   logohandle: discord
+  pattern: "^https://((discord\\.gg/.+)|(discord\\.com/invite/.+))"
 
 - id: dribbble
   iconhtml: <i class="fab fa-dribbble icon-link"></i>
   logohandle: dribbble
+  pattern: "^http[s]?://(www\\.)?dribbble\\.com/.+"
 
 - id: facebook
   iconhtml: <i class="fab fa-facebook icon-link"></i>
   logohandle: facebook
+  pattern: "^http[s]?://((www\\.)|(business\\.)|([a-z]{2}[-][a-z]{2}\\.))?facebook\\.com/.+"
 
 - id: flickr
   iconhtml: <i class="fab fa-flickr icon-link"></i>
@@ -49,6 +53,7 @@
 - id: linkedin
   iconhtml: <i class="fab fa-linkedin icon-link"></i>
   logohandle: linkedin
+  pattern: "^http[s]?://(www\\.)?linkedin\\.com/.*"
 
 - id: pinterest
   iconhtml: <i class="fab fa-pinterest icon-link"></i>
@@ -117,6 +122,7 @@
 - id: wikipedia
   iconhtml: <i class="fab fa-wikipedia-w icon-link"></i>
   logohandle: wikipedia
+  pattern: "^http[s]?://[a-z]+[.](m[.])?wiki[pm]edia\\.org/.*"
 
 - id: xing
   iconhtml: <i class="fab fa-xing icon-link"></i>
@@ -125,3 +131,4 @@
 - id: youtube
   iconhtml: <i class="fab fa-youtube icon-link"></i>
   logohandle: youtube
+  pattern: "^http[s]?://(www\\.)?youtube\\.com/.*"
