--- a/.github/workflows/metacheck.yaml
+++ b/.github/workflows/metacheck.yaml
@@ -24,6 +24,18 @@ jobs:
           https://github.com/FileFormatInfo/fflint/releases/latest/download/fflint_Linux_x86_64.tar.gz \
           | tar -xz fflint
 
-    - name: Check metadata
+    - name: Check metadata keys
       run: |
         PATH=.:$PATH bin/chkmeta.sh
+
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install Python dependencies
+      run: pip install python-frontmatter
+
+    - name: Check metadata links
+      run: |
+        python3 bin/chkmetalink.py
