--- a/www/_config.yml
+++ b/www/_config.yml
@@ -5,6 +5,7 @@
 google_analytics_id: UA-328425-25
 exclude: [ "*.sh" ]
 excerpt_separator: ""
+include: [ "_headers" ]
 permalink: /news/:year/:month/:day/:title/index.:output_ext
 production_url: https://www.vectorlogo.zone
 indexpage: index.html
